@@ -1,28 +1,25 @@
 package com.example.spotify.controlador;
 
+import java.io.*;
 import java.net.URL;
+
+import com.example.spotify.Main;
+import com.example.spotify.modelo.*;
 import javafx.fxml.FXML;
-import javafx.scene.Scene;
 import javafx.stage.Stage;
 import java.nio.ByteBuffer;
-import java.io.IOException;
 import javafx.scene.image.*;
-import javafx.stage.Modality;
-import javafx.fxml.FXMLLoader;
 
-import java.sql.SQLException;
+import java.sql.Blob;
 import java.util.ResourceBundle;
-import com.example.spotify.Main;
 import javafx.event.ActionEvent;
 import javafx.fxml.Initializable;
 import javafx.scene.control.Alert;
 import javafx.scene.control.TextField;
-import com.example.spotify.modelo.Alerta;
 import javafx.scene.control.PasswordField;
-import com.example.spotify.modelo.Usuario;
 
 public class RegisterController implements Initializable {
-
+    Main main = new Main();
     @FXML
     private TextField nombreUsuarioNuevoTxt;
     @FXML
@@ -34,29 +31,8 @@ public class RegisterController implements Initializable {
     @FXML
     private ImageView iconoImageView;
     private Image[] iconos;  // Arreglo para almacenar las imágenes
+    private String[] rutaIconos;
     private int indiceIconoActual = 0;  // Índice de la imagen actual
-
-    Main main = new Main();
-    AppMainController appMainController = new AppMainController();
-    Usuario usuario = new Usuario();
-
-    public void ventanaRegistro() {
-        try {
-            FXMLLoader fxmlLoader = new FXMLLoader(Main.class.getResource("/com/example/spotify/RegisterView.fxml"));
-            Scene scene = new Scene(fxmlLoader.load(), 600, 500);
-            Stage stage = new Stage();
-            stage.setResizable(false);
-            stage.setTitle("Registro");
-            // Establecer la modalidad antes de mostrar la ventana
-            stage.initModality(Modality.APPLICATION_MODAL);
-
-            stage.setScene(scene);
-            stage.show();
-        } catch (IOException e) {
-            Alerta.showAlert("Error","Error al cargar la ventana de registro.",Alert.AlertType.WARNING);
-        }
-    }
-
     public void initialize(URL url, ResourceBundle resourceBundle) {
         // Inicializar el arreglo de imágenes
         iconos = new Image[]{
@@ -66,46 +42,53 @@ public class RegisterController implements Initializable {
                 new Image(getClass().getResourceAsStream("/imagenes/iconoUsuario4.png"))
         };
 
+        rutaIconos = new String[] {
+                new String("/imagenes/iconoUsuario1.png"),
+                new String("/imagenes/iconoUsuario2.png"),
+                new String("/imagenes/iconoUsuario3.png"),
+                new String("/imagenes/iconoUsuario4.png")
+        };
+
         // Mostrar la primera imagen al inicio
         iconoImageView.setImage(iconos[indiceIconoActual]);
     }
 
     @FXML
     public void confirmarRegistro(ActionEvent actionEvent) {
+        Image imagenElegida = iconoImageView.getImage();
+        Usuario usuario = new Usuario();
         if (camposNoVacios() && passCoinciden()) {
             // Configurar datos del usuario
             usuario.setNombre(nombreUsuarioNuevoTxt.getText().trim());
             usuario.setEmail(emailUsuarioNuevoTxt.getText().trim());
             usuario.setPassw(passUsuarioNuevoTxt.getText().trim());
-            usuario.setIconoUsuario(imageToByteArray(iconoImageView.getImage()));
-
-            try {
-                // Insertar usuario en la base de datos
-                Usuario.insertarUsuario(usuario);
+            //usuario.setIconoUsuario((Blob));
+            if(CrudUsuarios.insertarUsuario(usuario, main)) {
                 cerrarVentana();
-                appMainController.ventanaPrincipal();
-            } catch (Exception e) {
-                // Manejar otras excepciones de manera genérica
-                e.printStackTrace();
-                Alerta.showAlert("Error", "Se produjo un error durante el registro.", Alert.AlertType.ERROR);
+                Ventana.ventanaMainApp();
+                main.setUsuario(usuario.getEmail());
             }
         }
     }
 
     private boolean camposNoVacios() {
-        if (nombreUsuarioNuevoTxt.getText().trim().isEmpty()) {
+        if (nombreUsuarioNuevoTxt.getText().trim().isBlank()) {
             Alerta.showAlert("Error","Debe ingresar su nombre de usuario.", Alert.AlertType.WARNING);
             return false;
         }
-        if (emailUsuarioNuevoTxt.getText().trim().isEmpty()) {
+        if (emailUsuarioNuevoTxt.getText().trim().isBlank()) {
             Alerta.showAlert("Error","Debe ingresar su correo electrónico.", Alert.AlertType.WARNING);
             return false;
         }
-        if (passUsuarioNuevoTxt.getText().trim().isEmpty()) {
+        if (!emailUsuarioNuevoTxt.getText().matches("^[A-Za-z0-9+_.-]+@[A-Za-z0-9.-]+$")){
+            Alerta.showAlert("Error", "Formato de correo electrónico inválido.", Alert.AlertType.WARNING);
+            return false;
+        }
+        if (passUsuarioNuevoTxt.getText().trim().isBlank()) {
             Alerta.showAlert("Error","Debe ingresar una contraseña.", Alert.AlertType.WARNING);
             return false;
         }
-        if (confirmarPassTxt.getText().trim().isEmpty()) {
+        if (confirmarPassTxt.getText().trim().isBlank()) {
             Alerta.showAlert("Error","Debe confirmar su contraseña.", Alert.AlertType.WARNING);
             return false;
         }
@@ -129,27 +112,13 @@ public class RegisterController implements Initializable {
         iconoImageView.setImage(iconos[indiceIconoActual]);
     }
 
-    private byte[] imageToByteArray(Image image) {
-        if (image != null) {
-            PixelReader pixelReader = image.getPixelReader();
-            int width = (int) image.getWidth();
-            int height = (int) image.getHeight();
-            WritablePixelFormat<ByteBuffer> format = PixelFormat.getByteBgraInstance();
-            byte[] buffer = new byte[width * height * 4];
-            pixelReader.getPixels(0, 0, width, height, format, buffer, 0, width * 4);
-            return buffer;
-        }
-        return null;
-    }
-
     /**
      * Método para cancelar el registro y volver a la ventana de inicio de sesión.
      * @param actionEvent Evento de acción asociado al botón de cancelar.
      */
     public void cancelarRegistro(ActionEvent actionEvent){
-        Stage stage = (Stage) nombreUsuarioNuevoTxt.getScene().getWindow();
-        stage.close();
-        main.start(stage);
+        cerrarVentana();
+        Ventana.ventanaLogin();
     }
 
     /**
@@ -159,5 +128,20 @@ public class RegisterController implements Initializable {
         Stage stage = (Stage) nombreUsuarioNuevoTxt.getScene().getWindow();
         stage.close();
     }
+/*
+    public void obtenerIcono() {
+        for (int i = 0; i < rutaIconos.length; i++) {
+
+        }
+        File imagen = new File(ruta);
+        try {
+            ObjectInputStream ois = new ObjectInputStream(new FileInputStream(imagen));
+        } catch (FileNotFoundException e) {
+            throw new RuntimeException(e);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+    }
+*/
 
 }
